@@ -1199,6 +1199,10 @@ PHP_FUNCTION(pg_query)
 static void _php_pgsql_free_params(char **params, int num_params)
 {
 	if (num_params > 0) {
+		int i;
+		for (i = 0; i < num_params; i++) {
+			efree(params[i]);
+		}
 		efree(params);
 	}
 }
@@ -1216,7 +1220,6 @@ PHP_FUNCTION(pg_query_params)
 	int leftover = 0;
 	int num_params = 0;
 	char **params = NULL;
-	unsigned char otype;
 	PGconn *pgsql;
 	PGresult *pgsql_result;
 	ExecStatusType status;
@@ -1276,19 +1279,20 @@ PHP_FUNCTION(pg_query_params)
 				RETURN_FALSE;
 			}
 
-			otype = (*tmp)->type;
-			convert_to_string_ex(tmp);
-			if (Z_TYPE_PP(tmp) != IS_STRING) {
-				php_error_docref(NULL TSRMLS_CC, E_WARNING,"Error converting parameter");
-				_php_pgsql_free_params(params, num_params);
-				RETURN_FALSE;
-			}
-
-			if (otype == IS_NULL) {
+			if (Z_TYPE_PP(tmp) == IS_NULL) {
 				params[i] = NULL;
-			}
-			else {
-				params[i] = Z_STRVAL_PP(tmp);
+			} else {
+				zval tmp_val = **tmp;
+				zval_copy_ctor(&tmp_val);
+				convert_to_string(&tmp_val);
+				if (Z_TYPE(tmp_val) != IS_STRING) {
+					php_error_docref(NULL TSRMLS_CC, E_WARNING,"Error converting parameter");
+					zval_dtor(&tmp_val);
+					_php_pgsql_free_params(params, num_params);
+					RETURN_FALSE;
+				}
+				params[i] = estrndup(Z_STRVAL(tmp_val), Z_STRLEN(tmp_val));
+				zval_dtor(&tmp_val);
 			}
 
 			zend_hash_move_forward(Z_ARRVAL_PP(pv_param_arr));
@@ -1439,7 +1443,6 @@ PHP_FUNCTION(pg_execute)
 	int leftover = 0;
 	int num_params = 0;
 	char **params = NULL;
-	unsigned char otype;
 	PGconn *pgsql;
 	PGresult *pgsql_result;
 	ExecStatusType status;
@@ -1500,19 +1503,20 @@ PHP_FUNCTION(pg_execute)
 				RETURN_FALSE;
 			}
 
-			otype = (*tmp)->type;
-			SEPARATE_ZVAL(tmp);
-			convert_to_string_ex(tmp);
-			if (Z_TYPE_PP(tmp) != IS_STRING) {
-				php_error_docref(NULL TSRMLS_CC, E_WARNING,"Error converting parameter");
-				_php_pgsql_free_params(params, num_params);
-				RETURN_FALSE;
-			}
-
-			if (otype == IS_NULL) {
+			if (Z_TYPE_PP(tmp) == IS_NULL) {
 				params[i] = NULL;
 			} else {
-				params[i] = Z_STRVAL_PP(tmp);
+				zval tmp_val = **tmp;
+				zval_copy_ctor(&tmp_val);
+				convert_to_string(&tmp_val);
+				if (Z_TYPE(tmp_val) != IS_STRING) {
+					php_error_docref(NULL TSRMLS_CC, E_WARNING,"Error converting parameter");
+					zval_dtor(&tmp_val);
+					_php_pgsql_free_params(params, num_params);
+					RETURN_FALSE;
+				}
+				params[i] = estrndup(Z_STRVAL(tmp_val), Z_STRLEN(tmp_val));
+				zval_dtor(&tmp_val);
 			}
 
 			zend_hash_move_forward(Z_ARRVAL_PP(pv_param_arr));
@@ -4048,7 +4052,6 @@ PHP_FUNCTION(pg_send_query_params)
 	zval **pv_param_arr, **tmp;
 	int num_params = 0;
 	char **params = NULL;
-	unsigned char otype;
 	zval **query;
 	int id = -1;
 	PGconn *pgsql;
@@ -4097,20 +4100,20 @@ PHP_FUNCTION(pg_send_query_params)
 				RETURN_FALSE;
 			}
 
-			otype = (*tmp)->type;
-			SEPARATE_ZVAL(tmp);
-			convert_to_string_ex(tmp);
-			if (Z_TYPE_PP(tmp) != IS_STRING) {
-				php_error_docref(NULL TSRMLS_CC, E_WARNING,"Error converting parameter");
-				_php_pgsql_free_params(params, num_params);
-				RETURN_FALSE;
-			}
-
-			if (otype == IS_NULL) {
+			if (Z_TYPE_PP(tmp) == IS_NULL) {
 				params[i] = NULL;
-			}
-			else {
-				params[i] = Z_STRVAL_PP(tmp);
+			} else {
+				zval tmp_val = **tmp;
+				zval_copy_ctor(&tmp_val);
+				convert_to_string(&tmp_val);
+				if (Z_TYPE(tmp_val) != IS_STRING) {
+					php_error_docref(NULL TSRMLS_CC, E_WARNING,"Error converting parameter");
+					zval_dtor(&tmp_val);
+					_php_pgsql_free_params(params, num_params);
+					RETURN_FALSE;
+				}
+				params[i] = estrndup(Z_STRVAL(tmp_val), Z_STRLEN(tmp_val));
+				zval_dtor(&tmp_val);
 			}
 
 			zend_hash_move_forward(Z_ARRVAL_PP(pv_param_arr));
@@ -4194,7 +4197,6 @@ PHP_FUNCTION(pg_send_execute)
 	zval **pv_param_arr, **tmp;
 	int num_params = 0;
 	char **params = NULL;
-	unsigned char otype;
 	zval **stmtname;
 	int id = -1;
 	PGconn *pgsql;
@@ -4241,19 +4243,20 @@ PHP_FUNCTION(pg_send_execute)
 				RETURN_FALSE;
 			}
 
-			otype = (*tmp)->type;
-			convert_to_string(*tmp);
-			if (Z_TYPE_PP(tmp) != IS_STRING) {
-				php_error_docref(NULL TSRMLS_CC, E_WARNING,"Error converting parameter");
-				_php_pgsql_free_params(params, num_params);
-				RETURN_FALSE;
-			}
-
-			if (otype == IS_NULL) {
+			if (Z_TYPE_PP(tmp) == IS_NULL) {
 				params[i] = NULL;
-			}
-			else {
-				params[i] = Z_STRVAL_PP(tmp);
+			} else {
+				zval tmp_val = **tmp;
+				zval_copy_ctor(&tmp_val);
+				convert_to_string(&tmp_val);
+				if (Z_TYPE(tmp_val) != IS_STRING) {
+					php_error_docref(NULL TSRMLS_CC, E_WARNING,"Error converting parameter");
+					zval_dtor(&tmp_val);
+					_php_pgsql_free_params(params, num_params);
+					RETURN_FALSE;
+				}
+				params[i] = estrndup(Z_STRVAL(tmp_val), Z_STRLEN(tmp_val));
+				zval_dtor(&tmp_val);
 			}
 
 			zend_hash_move_forward(Z_ARRVAL_PP(pv_param_arr));
